Agentforce/force-app/main/default/objects/Account_Role__c/Account_Role__c.object-meta.xml
<CustomObject>
    <description>AD-88 - Add Account Role object. This will be used across Leads and Opportunities</description>
    <label>Account Role</label>
    <nameField>
        <label>Account Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>