Agentforce/force-app/main/default/objects/Account_Role__c/fields/Account_Role_No__c.field-meta.xml
<CustomField>
    <fullName>Account_Role_No__c</fullName>
    <description>Account Role No used to identify record</description>
    <displayFormat>AR-{000000}</displayFormat>
    <label>Account Role No</label>
    <type>AutoNumber</type>
</CustomField>