Agentforce/force-app/main/default/objects/Account_Role__c/fields/AccountRoleCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>AccountRoleCaseSafeID__c</fullName>
    <description>Account Role CaseSafeID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountRoleCaseSafeID</label>
    <type>Text</type>
</CustomField>