Agentforce/force-app/main/default/objects/Account_Role__c/fields/Current_Provided_Service__c.field-meta.xml
<CustomField>
    <fullName>Current_Provided_Service__c</fullName>
    <description>E2E-17 - Track service against an Incumbent</description>
    <label>Current Provided Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Family</valueSetName>
    </valueSet>
</CustomField>