Agentforce/force-app/main/default/objects/Account_Role__c/fields/Estimated_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Value__c</fullName>
    <description>E2E-17 - Track the estimated annual value against an Incumbent</description>
    <label>Estimated Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>