Agentforce/force-app/main/default/objects/Account_Role__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <formula>TEXT(Lead__r.Status)</formula>
    <label>Lead Status</label>
    <type>Text</type>
</CustomField>