Agentforce/force-app/main/default/objects/Account_Role__c/fields/Opportunity_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Award_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Opportunity Award Date</label>
    <type>Date</type>
</CustomField>