Agentforce/force-app/main/default/objects/Account_Role__c/fields/Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity__c</fullName>
    <formula>OR(ISPICKVAL(Opportunity__r.Type, &quot;Rebid&quot;),
			ISPICKVAL(Opportunity__r.Type, &quot;Extension&quot;)
			)</formula>
    <label>Renewal Opportunity</label>
    <type>Checkbox</type>
</CustomField>