Agentforce/force-app/main/default/objects/Account_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>AD-88 - Create Role field for Account Role object</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
                <default>true</default>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>Winning Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>