Agentforce/force-app/main/default/objects/Account_Role__c/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <description>E2E-15 - Capture the date in which the provided service is ending</description>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>