Agentforce/force-app/main/default/objects/Account_Role__c/recordTypes/Incumbent.recordType-meta.xml
<RecordType>
    <fullName>Incumbent</fullName>
    <active>true</active>
    <label>Incumbent</label>
</RecordType>