Agentforce/force-app/main/default/objects/Account_Role__c/recordTypes/Winning_Competitor.recordType-meta.xml
<RecordType>
    <fullName>Winning_Competitor</fullName>
    <active>true</active>
    <label>Winning Competitor</label>
</RecordType>